Fixed dark mode and updated css

--- a/app/src/output.css
+++ b/app/src/output.css
@@ -4519,7 +4519,6 @@ img {
 
 button {
   font-size: 1.1em;
-  background-color: #fff;
   color: #000;
   border: 3px solid #000;
   padding: 10px 20px;
@@ -4540,17 +4539,11 @@ button:hover {
 
 /* Brutalist Style Enhancements */
 
-/* .border-box {
-    border: 5px solid #fff;
-    padding: 20px;
-    margin: 20px 0;
+.border-box {
+  border: 5px solid #fff;
+  padding: 20px;
+  margin: 20px 0;
 }
-
-div, section {
-    border: 3px solid #fff;
-    padding: 20px;
-    margin: 10px 0;
-} */
 
 ul {
   list-style-type: none;
