--- a/app/src/style.css
+++ b/app/src/style.css
@@ -67,7 +67,6 @@ img {
 
 button {
     font-size: 1.1em;
-    background-color: #fff;
     color: #000;
     border: 3px solid #000;
     padding: 10px 20px;
@@ -87,17 +86,11 @@ button:hover {
 }
 
 /* Brutalist Style Enhancements */
-/* .border-box {
+ .border-box {
     border: 5px solid #fff;
     padding: 20px;
     margin: 20px 0;
 }
-
-div, section {
-    border: 3px solid #fff;
-    padding: 20px;
-    margin: 10px 0;
-} */
 
 ul {
     list-style-type: none;
